# minimal_fortran_scikit_build_core_cibuildwheel_example

./: CMakeLists.txt  main.f90  pyproject.toml
.github/workflows/: build_wheels.yml
